--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -2,30 +2,9 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies with additional packages for better browser support
+# Install system dependencies (minimal version - no browser needed)
 RUN apt-get update && apt-get install -y \
     wget \
-    gnupg \
-    ca-certificates \
-    fonts-liberation \
-    libasound2 \
-    libatk-bridge2.0-0 \
-    libatk1.0-0 \
-    libatspi2.0-0 \
-    libcups2 \
-    libdbus-1-3 \
-    libdrm2 \
-    libgbm1 \
-    libgtk-3-0 \
-    libnspr4 \
-    libnss3 \
-    libwayland-client0 \
-    libxcomposite1 \
-    libxdamage1 \
-    libxfixes3 \
-    libxkbcommon0 \
-    libxrandr2 \
-    xdg-utils \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy the requirements file
@@ -33,9 +12,6 @@ COPY requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Install Playwright browsers with dependencies
-RUN playwright install chromium --with-deps
 
 # Copy the application code
 COPY . .
@@ -45,7 +21,6 @@ RUN mkdir -p data/json data/markdown logs config
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
-ENV PLAYWRIGHT_BROWSERS_PATH=/app/pw-browsers
 
 # Expose the Streamlit port
 EXPOSE 8501
